<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>geometry2d</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="kylestach99@gmail.com">Kyle Stachowicz</maintainer>
    <maintainer email="oswinso@gmail.com">Oswin So</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <build_depend>rj_robocup_cmake_utils</build_depend>
    <build_depend>rmw_implementation</build_depend>

    <depend>ament_index_cpp</depend>
    <depend>geometry2d_msgs</depend>
    <depend>launch_ros</depend>
    <depend>launch_xml</depend>
    <depend>rclcpp</depend>
    <depend>rcutils</depend>
    <depend>std_msgs</depend>
    <depend>rmw</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>launch_testing</test_depend>
    <test_depend>launch_testing_ament_cmake</test_depend>
    <test_depend>launch_testing_ros</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
